# jules-2

./: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS_EXAMPLES.md  BUILD_PERFORMANCE.md  Cargo.toml  FINAL_DELIVERY.md  GETTING_STARTED.md  GUIDE.md  INTEGRATION_STATUS.md  LICENSE  ML_INTEGRATION_VALIDATED.md  ML_SYSTEM_VALIDATION_COMPLETE.txt  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_MAX.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  README.md  advanced_optimizer.rs  advanced_self_repair.rs  aot_native.rs  asset_importer.rs  ast.rs  borrowck.rs  bytecode_vm.rs  chess_ml.rs  claude _skill.md  ffi.rs  frame_debugger.rs  game_systems.rs  gpu_backend.rs  hot_reload.rs  interp.rs  issues_TOO_FIX.md  lexer.rs  lib.rs  main.rs  memory_management.rs  micro-benchmark.rs  ml_chess.jules  (+21 more)
.cargo/: config.toml
.qwen/: settings.json  settings.json.orig
benches/: bench_ecs.rs
bindings/cpp/: jules.hpp
bindings/csharp/: Jules.cs
bindings/python/: jules.py
jules_files/: ai_playground.jules  ant_ai_sim.jules  ant_colony.jules  game_arcade_showcase.jules  game_nn_demo.jules  playground_connect4.jules  playground_fighting.jules  playground_investigation.jules  playground_pong.jules  small_game.jules  test_simple.jules  tmp_generated.jules
jules_std/: ai.rs  alloc.rs  collections.rs  geometry.rs  math.rs  mod.rs  net.rs  noise.rs  pathfind.rs  random.rs  spatial.rs
md/: CHESS_ML_BENCHMARK.md  FEATURES_AND_OPTIMIZATIONS.md  GAME_DEV_ROADMAP.md  JAX_BACKEND.md  OPTIMIZATIONS.md  OPTIMIZATION_BACKLOG.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  STDLIB.md  claude _skill.md
scripts/: bolt-optimize.sh  build-optimized.sh  build-ultra-fast.sh  generate_jules.py  jules_jax_backend.py  pgo-build.sh
tools/: bench_ant_colony.rs  bench_chess_ml.rs  bench_interp_vs_rust.rs  bench_jules_ml_chess.rs  bench_mlp_1m.rs  bench_mlp_hard.rs  bench_prime_race.rs
