[package]
name = "jules"
version = "0.2.0"
edition = "2021"
authors = ["jules"]
description = "Jules programming language compiler/interpreter with game dev, ML, and FFI support"
license = "MIT"
autobenches = false

[lib]
name = "jules"
path = "main.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "jules"
path = "main.rs"

[[bin]]
name = "bench-ecs"
path = "benches/bench_ecs.rs"

[[bin]]
name = "micro-benchmark"
path = "micro-benchmark.rs"

[[bin]]
name = "bench-chess-ml"
path = "tools/bench_chess_ml.rs"

[[bin]]
name = "bench-interp-vs-rust"
path = "tools/bench_interp_vs_rust.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }
libc = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
matrixmultiply = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
colored = "2"
rustyline = "12"
rustc-hash = "1"
rayon = "1"

[features]
default = ["ffi-c", "phase1", "phase2", "phase3-jit"]
python = ["pyo3", "numpy"]
ffi-c = []
phase1 = []
phase2 = []
phase3-jit = []
phase4-llvm = []
phase5-cow = []
phase6-simd = []
full = ["python", "ffi-c", "phase1", "phase2", "phase3-jit", "phase4-llvm", "phase5-cow", "phase6-simd"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[profile.bench]
inherits = "release"
